# task_tracker_learn

./: .env  main.py  pyproject.toml
src/adapters/: __init__.py  task_mapper.py  user_mapper.py
src/config/: database.py
src/database/: sqllite.py
src/database/models/: __init__.py  task.py  taskmodel.py  usermodel.py
src/exceptions/: __init__.py  task.py  user.py
src/models/: __init__.py  tag.py  task.py  user.py
src/repositories/: __init__.py  base.py
src/repositories/tags/: base.py
src/repositories/tasks/: __init__.py  alchemy_repository.py  base.py  dict_repository.py  list_repository.py
src/repositories/user/: __init__.py  alchemy_repository.py
src/scripts/: assigne_task.py
src/service/: __init__.py  task_user.py  tasks.py
tests/: conftest.py  session_for_test.py
tests/factories/: task_factory.py
tests/integration/task_alchemy_repository/: test_save.py
tests/unit/adapters/: test_task_mapper.py
tests/unit/repository/task_base_repository/: conftest.py  fake_repository.py  test_create.py  test_update_task.py
tests/unit/repository/task_list_repository/: conftest.py
tests/unit/service/: fake_repositry.py  test_close_task.py
