[project]
name = "task-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "factory-boy>=3.3.3",
    "faker>=40.19.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.16",
    "sqlalchemy>=2.0.50",
]
